--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,10 +7,22 @@
 	"editor.tabSize": 4,
 	"editor.detectIndentation": false,
 	"editor.defaultFormatter": "biomejs.biome",
-	"[typescript,typescriptreact,json]": {
+	"editor.formatOnSave": true,
+	"[jsonc]": {
 		"editor.defaultFormatter": "biomejs.biome"
 	},
-	"editor.formatOnSave": true,
+	"[json]": {
+		"editor.defaultFormatter": "biomejs.biome"
+	},
+	"[typescriptreact]": {
+		"editor.defaultFormatter": "biomejs.biome"
+	},
+	"[javascript]": {
+		"editor.defaultFormatter": "biomejs.biome"
+	},
+	"[javascriptreact]": {
+		"editor.defaultFormatter": "biomejs.biome"
+	},
 	"eslint.rules.customizations": [{ "rule": "*", "severity": "warn" }],
 	"typescript.enablePromptUseWorkspaceTsdk": true,
 	"typescript.preferences.autoImportFileExcludePatterns": [
